[package]
name = "palworld_rcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
psutil = "3.3.0"
rcon = { version = "0.6.0", features=["rt-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
dotenv = { version = "0.15.0" }