[package]
name = "palworldcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
palworld_server = { path="../palworld_server"}
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
log = { version = "0.4.20" }
fern = { version = "0.6.2" }
humantime = "2.1.0"
